re PR tree-optimization/49610 (Segfault with -ftree-vectorize (or -O3))

PR tree-optimization/49610
        * tree-vect-loop.c (vect_is_slp_reduction): Check that DEF_STMT has
        a basic block.

From-SVN: r175786